backend/debug_log.txt
file:///D:/SMART-HR/backend/routes/document.routes.js:5
import { protect, admin } from '../middleware/authMiddleware.js';
                  ^^^^^
SyntaxError: The requested module '../middleware/authMiddleware.js' does not provide an export named 'admin'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
